@@ -4,6 +4,8 @@ CHANGES.txt - 2009-01-14
 CHANGES IN CUPS V1.4b3
 
 	- Documentation fixes (STR #3044, STR #3057)
+	- SNMP lookups via side-channel did not work for NULL-VALUE and
+	  and OCTET-STRING OIDs containing nul characters.
 	- The libusb-based USB backend did not work.
 	- The scheduler did not set the printer-commands attribute correctly
 	  for some PPDs.
